changing post title and sub

--- a/posts/2024-09-15-pandas-datareader/index.qmd
+++ b/posts/2024-09-15-pandas-datareader/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Using Python to fetch data from the Federal Reserve"
-description: "Accessing, manipulating, and visualizing data from key public resources"
+title: "Analyzing CPI with Python and R"
+description: "Accessing, analyzing, and visualizing data from the Federal Reserve"
 author:
   - name: Mickey Rafa
     url: https://mrafa3.github.io/
